--- a/demo-3.html
+++ b/demo-3.html
@@ -2,7 +2,7 @@
 
 <head>
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.js"></script>
+  <!-- <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.js"></script> -->
   <script src="js/extended-wasd-controls.js"></script>
   <script>
 
