testing look-controls on Meta Quest

--- a/town.html
+++ b/town.html
@@ -75,9 +75,9 @@
       return check;
     };
     // Add look controls when it's not on mobile
-    if(!window.mobileAndTabletCheck()) {
+    // if(!window.mobileAndTabletCheck()) {
       myCam.setAttribute("look-controls", "")
-    }
+    // }
 
 
 
